# Brain

./: Brain.kdev4  CMakeLists.txt  layer.cpp  layer.h  main.cpp  neuralnetwork.cpp  neuralnetwork.h  node.cpp  node.h  reader.cpp  reader.h
.kdev4/: Brain.kdev4
